--- a/css/reveal.css
+++ b/css/reveal.css
@@ -81,10 +81,10 @@ body {
 	line-height: 1;
 }
 
-.reveal h1 { font-size: 3.77em; }
-.reveal h2 { font-size: 2.11em;	}
-.reveal h3 { font-size: 1.55em;	}
-.reveal h4 { font-size: 1em;	}
+.reveal h1 { font-size: 110px; }
+.reveal h2 { font-size: 80px;	}
+.reveal h3 { font-size: 50px;	}
+.reveal h4 { font-size: 30px;	}
 
 
 /*********************************************
@@ -323,7 +323,7 @@ body {
 
 	text-align: left;
 	font-size: 0.55em;
-	font-family: monospace;
+	font-family: InputMono, monospace;
 	line-height: 1.2em;
 
 	word-wrap: break-word;
@@ -331,7 +331,7 @@ body {
 	box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
 }
 .reveal code {
-	font-family: monospace;
+	font-family: InputMono, monospace;
 }
 .reveal pre code {
 	padding: 5px;
@@ -425,7 +425,7 @@ body {
 		top: 42px;
 
 		border-right-width: 22px;
-		border-right-color: #eee;
+		border-right-color: #fff;
 	}
 		.reveal .controls div.navigate-left.fragmented {
 			opacity: 0.3;
