--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -17,6 +17,10 @@ body {
 	color: $mainColor;
 }
 
+.reveal .slides {
+	text-align: left;
+}
+
 ::selection {
 	color: $selectionColor;
 	background: $selectionBackgroundColor;
